Make Footer spacing consistent with header and fix spacing issue

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -814,8 +814,13 @@ footer .ha-logo {
 }
 
 footer .nav-items > ul > li > * {
-  margin-left: 2vw;
+  margin-right: 2vw;
 }
+
+footer .nav-items > ul > li:last-child > * {
+  margin-right: 0;
+}
+
 
 footer .language-switcher {
   grid-area: language-switcher;
